--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
     .contador {
-      font-size: 1.5em;
+      font-size: 1.8em;
       margin: 20px 0;
       font-weight: bold;
     }
@@ -38,7 +38,9 @@
   <h1>Viny & Estefany 💖</h1>
   <div class="contador" id="contador"></div>
   <div class="frase">
-    Que nosso tempo nunca termine... 12 anos e contando...<br>Amo você &lt;3
+    Que nosso tempo nunca termine...<br>
+    Já são milhares de dias de amor...<br>
+    Amo você &lt;3
   </div>
   <img src="foto.jpg" alt="Viny e Estefany juntos">
 
@@ -47,26 +49,9 @@
 
     function atualizarContador() {
       const agora = new Date();
-      let totalSegundos = Math.floor((agora - inicio) / 1000);
-
-      const anos = Math.floor(totalSegundos / (365.25 * 24 * 3600));
-      totalSegundos -= Math.floor(anos * 365.25 * 24 * 3600);
-
-      const meses = Math.floor(totalSegundos / (30.44 * 24 * 3600));
-      totalSegundos -= Math.floor(meses * 30.44 * 24 * 3600);
-
-      const dias = Math.floor(totalSegundos / (24 * 3600));
-      totalSegundos %= (24 * 3600);
-
-      const horas = Math.floor(totalSegundos / 3600);
-      totalSegundos %= 3600;
-
-      const minutos = Math.floor(totalSegundos / 60);
-      const segundos = totalSegundos % 60;
-
+      const totalDias = Math.floor((agora - inicio) / (1000 * 60 * 60 * 24));
       document.getElementById("contador").innerHTML =
-        `${anos} anos, ${meses} meses, ${dias} dias, ` +
-        `${horas}h ${minutos}min ${segundos}s`;
+        `Estamos juntos há <strong>${totalDias}</strong> dias 💑`;
     }
 
     setInterval(atualizarContador, 1000);
