--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
     .contador {
-      font-size: 1.8em;
+      font-size: 1.5em;
       margin: 20px 0;
       font-weight: bold;
     }
@@ -38,8 +38,7 @@
   <h1>Viny & Estefany 💖</h1>
   <div class="contador" id="contador"></div>
   <div class="frase">
-    Que nosso tempo nunca termine...<br>
-    Já são milhares de dias de amor...<br>
+    Que nosso tempo nunca termine... 12 anos e contando...<br>
     Amo você &lt;3
   </div>
   <img src="foto.jpg" alt="Viny e Estefany juntos">
@@ -49,9 +48,26 @@
 
     function atualizarContador() {
       const agora = new Date();
-      const totalDias = Math.floor((agora - inicio) / (1000 * 60 * 60 * 24));
+      let totalSegundos = Math.floor((agora - inicio) / 1000);
+
+      const anos = Math.floor(totalSegundos / (365.25 * 24 * 3600));
+      totalSegundos -= Math.floor(anos * 365.25 * 24 * 3600);
+
+      const meses = Math.floor(totalSegundos / (30.44 * 24 * 3600));
+      totalSegundos -= Math.floor(meses * 30.44 * 24 * 3600);
+
+      const dias = Math.floor(totalSegundos / (24 * 3600));
+      totalSegundos %= (24 * 3600);
+
+      const horas = Math.floor(totalSegundos / 3600);
+      totalSegundos %= 3600;
+
+      const minutos = Math.floor(totalSegundos / 60);
+      const segundos = totalSegundos % 60;
+
       document.getElementById("contador").innerHTML =
-        `Estamos juntos há <strong>${totalDias}</strong> dias 💑`;
+        `${anos} anos, ${meses} meses, ${dias} dias, ` +
+        `${horas}h ${minutos}min ${segundos}s`;
     }
 
     setInterval(atualizarContador, 1000);
